[package]
name = "imagenet_classifier"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.22", features = ["default_fonts"] }
egui = "0.22"
image = "0.24"
ndarray = "0.16"
ort = { version = "2.0.0-rc.10", features = [] }
rfd = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser", "windef"] }





